# blogs_quarto

./: _quarto.yml  about.qmd  index.qmd  pyproject.toml
docs/: about.html  index-listing.json  index.html  listings.json  search.json
docs/posts/Kriging/: Index.html
docs/posts/Morans I/: index.html
docs/posts/MyPostText/: index.html
docs/posts/Package/: index.html
docs/posts/SedonaDB/: index.html
docs/posts/post-with-code/: index.html
docs/posts/welcome/: index.html
posts/Kriging/: Index.qmd
posts/Moran's I/: index.ipynb  index.qmd
posts/Morans I/: index.qmd
posts/MyPostText/: index.qmd
posts/Package/: index.qmd
posts/SedonaDB/: index.qmd
posts/post-with-code/: index.qmd
posts/welcome/: index.qmd
