[project]
name = "blogs-quarto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SheldonDowns", email = "sheldondowns2002@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false
